# pythonCalculator

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
src/: main.py
src/calculator/: calculator.py  calculator_io.py
src/tests/: calculator_test.py
