[tool.poetry]
name = "pythoncalculator"
version = "0.1.0"
description = ""
authors = ["kaipainenoskari <oskari.kaipainen@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
coverage = "^7.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
